Updated link again

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-  <a href="http://www.google.com">Google link</a>
+  <a href="CS5002A3albums.html">Album project link</a>
 </body>
 </html>
