--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
   <a href="CS5002A3albums.html">Album project link</a>
+  <a href="gamePage.html">Video game sales data visualisation</a>
 </body>
 </html>
