--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>David Burn's Portfolio site</h1>
+<h2>Under construction</h2>
+<p>A collection of front-end programming projects made while studying for an MSc in Computing and Information Technology. Presently very much under construction.</p>
   <a href="CS5002A3albums.html">Album project link</a>
   </br>
-  <a href="gamePage.html">Video game sales data visualisation</a>
+  <p>A simple table of data about best-selling albums that can be filtered by different criteria.</p>
+  </br>
+  <a href="overviewbar.html">Video game sales data visualisation</a>
+  </br>
+  <p>Bar chart visualisation of the 100 top-selling videogames that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips</p>
 </body>
 </html>
