--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>David Burn's Portfolio site</h1>
+<h1>David Burns' Portfolio site</h1>
 <h2>Under construction</h2>
 <p>A collection of front-end programming projects made while studying for an MSc in Computing and Information Technology. Presently very much under construction.</p>
   <a href="CS5002A3albums.html">Album project link</a>
