--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </br>
   <a href="overviewbar.html">Video game sales data visualisation</a>
   </br>
-  <p>Bar chart visualisation of the 100 top-selling videogames that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips</p>
+  <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips</p>
+  </br>
+  <a href="checkers.html">Checkers game</a>
+  </br>
+  <p>A simple local two-player Checkers game made using jQuery</p>
 </body>
 </html>
