--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
 <html>
+  
+<head>
+  <title>David Burns' portfolio site - under construction</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: auto;
+    }
+    
+    .box {
+      width: 90%;
+      background-color: #c7dbfc;
+      border-radius: 5px;
+      border: 2px solid #99bcf7;
+    }
+  </style>
+</head>
+  
 <body>
-<h1>David Burns' Portfolio site</h1>
+<h1>David Burns' portfolio site</h1>
 <h2>Under construction</h2>
 <p>A collection of front-end programming projects made while studying for an MSc in Computing and Information Technology. Presently very much under construction.</p>
+ <div class="box">
   <a href="CS5002A3albums.html">Album project link</a>
   </br>
   <p>A simple table of data about best-selling albums that can be filtered by different criteria.</p>
+ </div>
   </br>
-  <a href="overviewbar.html">Video game sales data visualisation</a>
+ <div class="box">
+    <a href="overviewbar.html">Video game sales data visualisation</a>
+    </br>
+    <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips</p>
+ </div>
   </br>
-  <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips</p>
+ <div class="box">
+    <a href="checkers.html">Checkers game</a>
+    </br>
+    <p>A simple local two-player Checkers game made using jQuery</p>
+ </div>  
   </br>
-  <a href="checkers.html">Checkers game</a>
+ <div class="box">
+  <a href="Quizgame.html">Pub Quiz Game</a>
   </br>
-  <p>A simple local two-player Checkers game made using jQuery</p>
+  <p>A quiz game made using jQuery and the Quizdb API</p>
+ </div>
 </body>
 </html>
