Updated for travel site

--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
   </br>
   <p>A quiz game made using jQuery and the Quizdb API</p>
  </div>
+  </br>
+ <div class="box">
+  <a href="travelsite.html">Travel agency website</a>
+  </br>
+  <p>A sample website for a fictitious travel agency made using the Foundation framework.</p>
+ </div>
 </body>
 </html>
