Updated link to travel site

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </div>
   </br>
  <div class="box">
-  <a href="travelsite.html">Travel agency website</a>
+  <a href="travelsite/travelsite.html">Travel agency website</a>
   </br>
   <p>A sample website for a fictitious travel agency made using the Foundation framework.</p>
  </div>
