Updated text on visualisation project description

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <div class="col-sm-4 projectBox">
         <a href="vgsales/overviewbar.html" class="projectLink"><h3>Videogame sales charts</h3></a>
         <a href="vgsales/overviewbar.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/gamesales2.png"></a>
-      <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips. (Note: Must be viewed in Mozilla Firefox)</p>
+      <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips.</p>
     </div>
       
   <div class="col-sm-4 projectBox">
