--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             margin: auto;
         }
       
-        @media (max-width: 767px) {
-    .jumbotron {
-        margin-top:30px !important;
+    @media (max-width: 767px) {
+        #top {
+            height: 30px;
+        }
     }
-}
     </style>
     </head>
 <body>
@@ -265,13 +265,12 @@
         <p>The links below lead to a selection of projects developed as part of the MSc in Computing and IT.</p>
     </div>
 </div>
-<div class="row">    
+<div class="row"> 
     <div class="col-sm-4 projectBox">
-      <a href="musicDB/CS5002A3albums.html" class="projectLink"><h3>Album Data Table</h3></a>
-        <a href="musicDB/CS5002A3albums.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/albums.png"></a>
-      <p>A table of data about best-selling albums that can be filtered by single or multiple criteria.</p>
+        <a href="vgsales/overviewbar.html" class="projectLink"><h3>Videogame sales charts</h3></a>
+        <a href="vgsales/overviewbar.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/gamesales2.png"></a>
+      <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips.</p>
     </div>
-
 
     <div class="col-sm-4 projectBox">
         <a href="quiz/Quizgame.html" class="projectLink"><h3>Pub Quiz game</h3></a>
@@ -289,9 +288,9 @@
   </div>
 <div class="row">    
     <div class="col-sm-4 projectBox">
-        <a href="vgsales/overviewbar.html" class="projectLink"><h3>Videogame sales charts</h3></a>
-        <a href="vgsales/overviewbar.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/gamesales2.png"></a>
-      <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips.</p>
+      <a href="musicDB/CS5002A3albums.html" class="projectLink"><h3>Album Data Table</h3></a>
+        <a href="musicDB/CS5002A3albums.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/albums.png"></a>
+      <p>A table of data about best-selling albums that can be filtered by single or multiple criteria.</p>
     </div>
       
   <div class="col-sm-4 projectBox">
