--- a/index.html
+++ b/index.html
@@ -266,42 +266,42 @@
     </div>
 </div>
 <div class="row"> 
-    <div class="col-sm-4 projectBox">
+    <div class="col-sm-4 projectBox text-center">
         <a href="vgsales/overviewbar.html" class="projectLink"><h3>Videogame sales charts</h3></a>
-        <a href="vgsales/overviewbar.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/gamesales2.png"></a>
+        <a href="vgsales/overviewbar.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/gamesales2.png"></a>
       <p>Bar chart visualisation of the 100 top-selling videogames made using d3.js that can be viewed at higher and lower levels and filtered by different criteria, as well as displaying further data via tooltips.</p>
     </div>
 
-    <div class="col-sm-4 projectBox">
+    <div class="col-sm-4 projectBox text-center">
         <a href="quiz/Quizgame.html" class="projectLink"><h3>Pub Quiz game</h3></a>
-        <a href="quiz/Quizgame.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/quiz.png"></a>
+        <a href="quiz/Quizgame.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/quiz.png"></a>
       <p>A quiz game made using jQuery and the Quizdb API.</p>
     </div>
 
 
-    <div class="col-sm-4 projectBox">
+    <div class="col-sm-4 projectBox text-center">
         <a href="travelsite/travelsite.html" class="projectLink"><h3>Italia tours test webpage</h3></a>
-        <a href="travelsite/travelsite.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/website.png"></a>
+        <a href="travelsite/travelsite.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/website.png"></a>
       <p>A sample website for a fictitious travel agency made using the Foundation framework. Demonstrates features such as the carousel, accordion, and sticky "Magellan" navigation element.</p>
     </div>
 
   </div>
 <div class="row">    
-    <div class="col-sm-4 projectBox">
+    <div class="col-sm-4 projectBox text-center">
       <a href="musicDB/CS5002A3albums.html" class="projectLink"><h3>Album Data Table</h3></a>
-        <a href="musicDB/CS5002A3albums.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/albums.png"></a>
+        <a href="musicDB/CS5002A3albums.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/albums.png"></a>
       <p>A table of data about best-selling albums that can be filtered by single or multiple criteria.</p>
     </div>
       
-  <div class="col-sm-4 projectBox">
+  <div class="col-sm-4 projectBox text-center">
       <a href="client-running-checkers-app/checkers.html" class="projectLink"><h3>Checkers game</h3></a>
-      <a href="client-running-checkers-app/checkers.html"><img class="img-responsive img-thumbnail imgfit projectImg" src="siteimgs/checkers.png"></a>
+      <a href="client-running-checkers-app/checkers.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/checkers.png"></a>
       <p>A simple local two-player Checkers game made using jQuery.</p>
     </div>
     
-    <div class="col-sm-4 projectBox">
+    <div class="col-sm-4 projectBox text-center">
       <h3>More to come...</h3>
-      <div class="img-responsive img-thumbnail fakeimg imgfit"><i class="fas fa-ellipsis-h"></i></div>
+      <div class="img-responsive center-block img-thumbnail fakeimg imgfit"><i class="fas fa-ellipsis-h"></i></div>
       <p>This page will be updated with further projects in time.</p>
     </div>
   </div>
