Updated text and CSS for links

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <h1><i class="fab fa-html5"></i> <i class="fab fa-js"></i> <i class="fab fa-css3-alt"></i><i class="fab fa-node"></i></h1>
     <a href="mailto:david.burns.dtb@googlemail.com" ><h4 class="mobilefontsize"><i class="far fa-envelope"></i>  david.burns.dtb@googlemail.com</h4></a>
     <h4 class="mobilefontsize"><i class="fas fa-mobile-alt"></i>  +44 (0)7835 955 625</h4>
+        <a href="http://www.linkedin.com/in/david-burns-786b4a1a"><h4 class="mobilefontsize" style="display: inline"><i class="fab fa-linkedin"></i>  On LinkedIn</h4></a> <b style="color:white">|||</b> <a href="https://github.com/DTB50"><h4 class="mobilefontsize" style="display: inline"><i class="fab fa-github"></i>  On GitHub</h4></a>
 </div>
 
 
@@ -120,8 +121,8 @@
           <img class="img-responsive img-thumbnail" src="siteimgs/mephoto.png">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-xl-10">
-          <p>I am presently seeking employment as a web or software developer, having recently finished studying for an MSc in Computing and IT at the University of St Andrews. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau.</p>
-            <p>I have a background predominantly focused on financial services regulation, having spent much of my career at the Bank of England Prudential Regulation Authority; however, after taking some online coding courses as a hobby, I decided to return to university so that I could devote myself full-time to making a move into a technology-driven career. 
+          <p>I am presently seeking employment as a web or software developer to build on the skills developed while studying for an MSc in Computing and IT at the University of St Andrews, which I have recently completed. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau.</p>
+            <p>I am a keen learner, and discovered a passion for coding after taking up programming as a hobby through online courses. Prior to deciding to change field, my career was primarily in financial services regulation at the Bank of England, with a focus on digital communications and consumer protection policy development.
             </p>
         </div>
     </div>
