Transparency in jumbotron

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <h1><i class="fab fa-html5"></i> <i class="fab fa-js"></i> <i class="fab fa-css3-alt"></i><i class="fab fa-node"></i></h1>
     <a href="mailto:david.burns.dtb@googlemail.com" ><h4 class="mobilefontsize"><i class="far fa-envelope"></i>  david.burns.dtb@googlemail.com</h4></a>
     <h4 class="mobilefontsize"><i class="fas fa-mobile-alt"></i>  +44 (0)7835 955 625</h4>
-        <a href="http://www.linkedin.com/in/david-burns-786b4a1a"><h4 class="mobilefontsize" style="display: inline"><i class="fab fa-linkedin"></i>  On LinkedIn</h4></a> <b style="color:white">|||</b> <a href="https://github.com/DTB50"><h4 class="mobilefontsize" style="display: inline"><i class="fab fa-github"></i>  On GitHub</h4></a>
+        <a href="http://www.linkedin.com/in/david-burns-786b4a1a"><h4 class="mobilefontsize" style="display: inline"><i class="fab fa-linkedin"></i>  On LinkedIn</h4></a> <b style="color:#ffffff00">|||</b> <a href="https://github.com/DTB50"><h4 class="mobilefontsize" style="display: inline"><i class="fab fa-github"></i>  On GitHub</h4></a>
 </div>
 
 
