--- a/index.html
+++ b/index.html
@@ -347,7 +347,15 @@
       <p>A simple local two-player Checkers game made using jQuery.</p>
     </div>
     
-    <div class="col-sm-4 projectBox text-center">
+  <div class="col-sm-4 projectBox text-center">
+    <a href="client-running-checkers-app/checkers.html" class="projectLink"><h3>Latin synonym matching game</h3></a>
+      <a href="latinboardgame/gridgame.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/latinboardgame.png"></a>
+      <p>Latin synonym-matching game developed as part of my dissertation. Please view in Chrome or Safari.</p>
+    </div>
+  </div>
+    
+<div class="row">    
+        <div class="col-sm-4 projectBox text-center">
       <h3>More to come...</h3>
       <div class="img-responsive center-block img-thumbnail fakeimg imgfit"><i class="fas fa-ellipsis-h"></i></div>
       <p>This page will be updated with further projects in time.</p>
