Tweak to fix new project text link

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     </div>
     
   <div class="col-sm-4 projectBox text-center">
-    <a href="client-running-checkers-app/checkers.html" class="projectLink"><h3>Latin synonym matching game</h3></a>
+    <a href="latinboardgame/gridgame.html" class="projectLink"><h3>Latin synonym matching game</h3></a>
       <a href="latinboardgame/gridgame.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/latinboardgame.png"></a>
       <p>Latin synonym-matching game developed as part of my dissertation. Please view in Chrome or Safari.</p>
     </div>
