Fixed accordion and updated degree section

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
       <div id="accordion">
           
         <div class="card">
-          <div class="card-header" data-toggle="collapse">
-            <a class="card-link" href="#collapseSkills">
+          <div class="card-header">
+            <a class="card-link" data-toggle="collapse" href="#collapseSkills">
             <i class="fas fa-wrench"></i>  
             Skills
             </a>
@@ -154,8 +154,8 @@
                   <li><b>Web application development</b> 
                       <p>During my degree I have gained experience developing single-page web applications using Javascript/jQuery and Express.js/Node.js (both individually and collaboratively) and using Git for project workflow management. Projects created for this course included a quiz game, a multiplayer checkers game, two games for Latin language learning, a Twitter-style messaging web application, and a forum incorporating a database backend and the use of a number of APIs for local weather, mapping, and news.</p>
                   </li>
-                    <li><b>Database maintenance and data analysis/manipulation</b> 
-                        <p>Experience of designing, building and querying relational databases using MySQL, as well as visually representing spreadsheet data using the d3.js and c3.js libraries.</p>
+                  <li><b>Database maintenance and data analysis/manipulation</b> 
+                      <p>Experience of designing, building and querying relational databases using MySQL, as well as visually representing spreadsheet data using the d3.js and c3.js libraries.</p>
                   </li>
                     <li><b>Drafting effective communications</b> 
                     <p>Significant experience of developing clear and concise written outputs for communication by web, print and presentation to internal (working level and senior) and external (public and industry) stakeholders of the Bank of England. This entailed summarising complex technical and legal subjects in an accessible yet legally sound style.</p>
@@ -189,6 +189,9 @@
                         </li>
                     <li><b>Database Management Systems:</b> 
                         <p>Provided experience of relational database design, development and querying via mySQL.</p>
+                        </li>
+                    <li><b>Information Security Management: </b> 
+                        <p>Studied key data protection concepts, principles and practices including threat assessment, authentication, cryptography, network protection, penetration testing and information gathering (including port scanning), and key regulations and standards.</p>
                         </li>
                     <li><b>Data Ethics and Privacy:</b> 
                         <p>Studied key issues and regulation relating to the ethical handling of data, latterly focusing on the DGPR (including conducting mock Data Protection Impact Assessments).</p>
