CSS tweak for FS code image placeholders

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         .fakeimg {
               height: 200px;
             background-color: #aaa;
+            border: none;
           }  
 
             .imgfit{
