--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     
 <div class="jumbotron text-center" style="padding-bottom: 1em; margin-bottom: 0px;">
   <h1>David Burns</h1>
-    <h3>Aspiring web/software developer</h3>
+    <h3>Computing and IT graduate and keen programmer</h3>
     <h1><i class="fab fa-html5"></i> <i class="fab fa-js"></i> <i class="fab fa-css3-alt"></i><i class="fab fa-node"></i></h1>
     <a href="mailto:david.burns.dtb@googlemail.com" ><h4 class="mobilefontsize"><i class="far fa-envelope"></i>  david.burns.dtb@googlemail.com</h4></a>
     <h4 class="mobilefontsize"><i class="fas fa-mobile-alt"></i>  +44 (0)7835 955 625</h4>
@@ -127,7 +127,7 @@
           <img class="img-responsive img-thumbnail" src="siteimgs/mephoto.png">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-xl-10">
-          <p>I am presently seeking employment as a web or software developer to build on the skills developed while studying for an MSc in Computing and IT at the University of St Andrews, which I have recently completed with Distinction. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau.</p>
+          <p>I am presently seeking employment in a technology-centric role with a focus on programming, including web or software development, to build on the skills developed while studying for an MSc in Computing and IT at the University of St Andrews, which I have recently completed with Distinction. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau.</p>
             <p>I am a keen learner, and discovered a passion for coding after taking up programming as a hobby through online courses. Prior to deciding to change field, my career was primarily in financial services regulation at the Bank of England, with a focus on digital communications and consumer protection policy development.
             </p>
         </div>
