--- a/maps/maps.html
+++ b/maps/maps.html
@@ -86,7 +86,7 @@
                         //place marker using UFO icon
                         marker = L.marker([d.latitude, d.longitude], {icon: myIcon}).addTo(map)
                             //make a popup appear on click
-                            .bindPopup(<b>d.city<b>);
+                            .bindPopup(d.city);
                         currentLayer = L.marker([d.latitude, d.longitude], {icon: myIcon});
                         markersLayer.addLayer(marker); 
                         markersLayer.addTo(map);
