--- a/maps/maps.html
+++ b/maps/maps.html
@@ -86,7 +86,13 @@
                         //place marker using UFO icon
                         marker = L.marker([d.latitude, d.longitude], {icon: myIcon}).addTo(map)
                             //make a popup appear on click
-                            .bindPopup(d.city);
+                            .bindPopup("City: " + d.city <br>"Type: " + d.shape);
+                            marker.on('mouseover', function (e) {
+                                    this.openPopup();
+                            });
+                            marker.on('mouseout', function (e) {
+                                this.closePopup();
+                            });
                         currentLayer = L.marker([d.latitude, d.longitude], {icon: myIcon});
                         markersLayer.addLayer(marker); 
                         markersLayer.addTo(map);
