--- a/maps/maps.html
+++ b/maps/maps.html
@@ -118,7 +118,7 @@
                 myData.forEach(function(d){
                     if (d.country == "gb" && d.datetime.substr(6, 4) == year){
                         if (d.country == "gb" && d.datetime.substr(6, 4) == year){
-                            marker = L.marker([d.latitude, d.longitude], {icon: myIcon}).addTo(map);
+                            marker = L.marker([d.latitude, d.longitude], {icon: myIcon}).addTo(map)                  .bindTooltip("<b>City: </b>"  + d.city  + "<br><b>Type: </b>" + d.shape);
                             currentLayer = L.marker([d.latitude, d.longitude], {icon: myIcon});
                             markersLayer.addLayer(marker); 
                             markersLayer.addTo(map);
