--- a/index.html
+++ b/index.html
@@ -365,6 +365,12 @@
   </div>
     
 <div class="row">    
+      <div class="col-sm-4 projectBox text-center">
+    <a href="latinboardgame/gridgame.html" class="projectLink"><h3>UFO sighting map</h3></a>
+      <a href="maps/maps.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/ufomap.png"></a>
+      <p>A work-in-progress interactive map of UK-based UFO sightings using Leaflet.js and D3 to visualise a Kaggle dataset.</p>
+    </div>
+    
     <div class="col-sm-4 projectBox text-center">
       <h3>More to come...</h3>
       <div class="img-responsive center-block img-thumbnail fakeimg imgfit"><i class="fas fa-ellipsis-h"></i></div>
