--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     
 <div class="row">    
       <div class="col-sm-4 projectBox text-center">
-    <a href="latinboardgame/gridgame.html" class="projectLink"><h3>UFO sighting map</h3></a>
+    <a href="maps/maps.html" class="projectLink"><h3>UFO sighting map</h3></a>
       <a href="maps/maps.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/ufomap.png"></a>
       <p>A work-in-progress interactive map of UK-based UFO sightings using Leaflet.js and D3 to visualise a Kaggle dataset.</p>
     </div>
