--- a/maps/maps.html
+++ b/maps/maps.html
@@ -173,6 +173,7 @@
             }
             
             function reload() {
+                console.log("changing year to " + year);
                 sightings = 0;
                 markersLayer.remove();
                 markersLayer.clearLayers();
