--- a/maps/maps.html
+++ b/maps/maps.html
@@ -153,7 +153,7 @@
                     }
                 });
                 
-//                console.log(myDataParsed);
+                console.log(myDataParsed);
                 
             //update the sightings count
                 displaySightings();
