--- a/maps/maps.html
+++ b/maps/maps.html
@@ -113,7 +113,7 @@
 			
     //INITIAL PAGE SETUP: HAPPENS ON LOAD -------------------------------------------------------
 			
-            window.onload function () {
+            window.onload = function () {
             
             //BAR CHART
             d3.csv(dataPath, function(error, data){
