--- a/maps/maps.html
+++ b/maps/maps.html
@@ -156,7 +156,7 @@
             d3.select('#bar-chart').append('svg')
               .attr('width', width)
               .attr('height', height)
-              .style('background', black)
+              .style('background', '#000000')
               .selectAll('rect').data(myDataByYear)
               .enter().append('rect')
                 .style({'fill': '#3c763d', 'stroke': '#d6e9c6', 'stroke-width': '5'})
