--- a/maps/maps.html
+++ b/maps/maps.html
@@ -1,8 +1,8 @@
 <html>
 
 	<head>
-<!--		<script type="text/javascript" src="libraries/d3.min.js"></script> -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
+		<script type="text/javascript" src="libraries/d3.min.js"></script> 
+<!--		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>-->
 		<!-- include the path to the leaflet.js library -->
 		<script type="text/javascript" src="libraries/leaflet.js"></script>
 		
