--- a/maps/maps.html
+++ b/maps/maps.html
@@ -178,7 +178,7 @@
                       .data(data)
                     .enter().append("rect")
                       .attr("class", "bar")
-                      .attr("x", function(d) { return x(d.); })
+                      .attr("x", function(d) { return x(d.year); })
                       .attr("width", x.bandwidth())
                       .attr("y", function(d) { return y(d.sightingCount); })
                       .attr("height", function(d) { return height - y(d.sightingCount); });
