--- a/maps/maps.html
+++ b/maps/maps.html
@@ -170,14 +170,13 @@
                 console.log(myDataByYear);
                 
                 //now visualise the data
-                let data = myDataByYear;
                   // Scale the range of the data in the domains
                   x.domain(data.map(function(d) { return d.year; }));
                   y.domain([0, d3.max(data, function(d) { return d.sightingCount; })]);
 
                   // append the rectangles for the bar chart
                   svg.selectAll(".bar")
-                      .data(data)
+                      .data(myDataByYear)
                     .enter().append("rect")
                       .attr("class", "bar")
                       .attr("x", function(d) { return x(d.year); })
