--- a/maps/maps.html
+++ b/maps/maps.html
@@ -136,7 +136,7 @@
             // append the svg object to the body of the page
             // append a 'group' element to 'svg'
             // moves the 'group' element to the top left margin
-            var svg = d3.select("body").append("svg")
+            var svg = d3.select("#bar-chart").append("svg")
                 .attr("width", width + margin.left + margin.right)
                 .attr("height", height + margin.top + margin.bottom)
               .append("g")
@@ -179,10 +179,10 @@
                       .data(myDataByYear)
                     .enter().append("rect")
                       .attr("class", "bar")
-                      .attr("x", function(d) { return d.year; })
+                      .attr("x", function(d) { return x(d.year); })
                       .attr("width", x.bandwidth())
-                      .attr("y", function(d) { return d.sightingCount; })
-                      .attr("height", function(d) { return height - d.sightingCount; });
+                      .attr("y", function(d) { return y(d.sightingCount); })
+                      .attr("height", function(d) { return height - y(d.sightingCount); });
 
                   // add the x Axis
                   svg.append("g")
