--- a/maps/maps.html
+++ b/maps/maps.html
@@ -181,8 +181,8 @@
                       .attr("class", "bar")
                       .attr("x", function(d) { return x(d.year); })
                       .attr("width", x.bandwidth())
-                      .attr("y", function(d) { return y(d.sightingCount); })
-                      .attr("height", function(d) { return height - y(d.sightingCount); });
+                      .attr("y", function(d) { return d.sightingCount; })
+                      .attr("height", function(d) { return height - d.sightingCount; });
 
                   // add the x Axis
                   svg.append("g")
