--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 <div class="row"  id="fsApps">
     <div class="col">
         <h2>Full-stack applications</h2>    
-        <p>The links below lead to my curretnly hosted full stack applications.</p>
+        <p>The links below lead to my currently hosted full stack applications.</p>
     </div>
     </div>
 <div class="row">    
