--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     <div class="col-sm-4 projectBox text-center">
     <a href="http://dry-thicket-29493.herokuapp.com/" class="projectLink"><h3>UFO sighting map</h3></a>
       <a href="http://dry-thicket-29493.herokuapp.com/"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/ufomap.png"></a>
-      <p>An enhanced version of the D3 UFO map that speeds up the visualisation by moving dataset processing from the browser to a Node/Express server hosted by Heroku.</p>
+      <p>An enhanced version of the D3.js/Leaflet.js UFO map that reduces browser strain by moving dataset processing from the browser to a Node/Express server hosted by Heroku. (Note: as this is hosted via Heroku's free tier, it may take a few seconds for the dyno to start up due to inactivity)</p>
     </div>
     
     <div class="col-sm-4 projectBox text-center">
