Update to add full version of Latin synonym game
Main page updated - full-stack app section

--- a/index.html
+++ b/index.html
@@ -403,6 +403,12 @@
     </div>
     
     <div class="col-sm-4 projectBox text-center">
+    <a href="http://enigmatic-stream-47420.herokuapp.com/" class="projectLink"><h3>Latin game B: full version</h3></a>
+      <a href="http://enigmatic-stream-47420.herokuapp.com/"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/latintilegameserver.png"></a>
+      <p>An enhanced version of Latin synonym matching game B that enables users to sign up for, login to, and level up user accounts. This uses a Node/Express server hosted by Heroku and a MongoDB add-on hosted by mLab. (Note: as this is hosted via Heroku's free tier, it may take a few seconds for the dyno to start up due to inactivity)</p>
+    </div>
+    
+    <div class="col-sm-4 projectBox text-center">
       <h3>More to come...</h3>
       <div class="img-responsive center-block img-thumbnail fakeimg imgfit"><i class="fas fa-ellipsis-h"></i></div>
       <p>This page will be updated with further projects in time.</p>
