--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
     <div class="col-sm-4 projectBox text-center">
     <a href="http://enigmatic-stream-47420.herokuapp.com/" class="projectLink"><h3>Latin game B: full version</h3></a>
       <a href="http://enigmatic-stream-47420.herokuapp.com/"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/latintilegameserver.png"></a>
-      <p>An enhanced version of Latin synonym matching game B that enables users to sign up for, login to, and level up user accounts. This uses a Node/Express server hosted by Heroku and a MongoDB add-on hosted by mLab. (Note: as this is hosted via Heroku's free tier, it may take a few seconds for the dyno to start up due to inactivity)</p>
+      <p>An enhanced version of Latin synonym matching game B that enables users to sign up for, login to, and level up user accounts. This uses a Node/Express server hosted by Heroku and a MongoDB add-on hosted by mLab. Please note that the Heroku dyno may take a few seconds to start up due to inactivity. Please also note that the user login database exists as a proof of concept, and personal or identifiable data should not be entered into it. Additionally, do not enter password/username combinations that have been used elsewhere.</p>
     </div>
     
     <div class="col-sm-4 projectBox text-center">
