--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <img class="img-responsive img-thumbnail" src="siteimgs/mephoto.png">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-xl-10">
-          <p>I am presently seeking employment in a technology-centric role with a focus on programming, including web or software development, to build on the skills developed while studying for an MSc in Computing and IT at the University of St Andrews, which I have recently completed with Distinction. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau.</p>
+          <p>I am presently seeking employment in a technology-centric role with a focus on programming, including web or software development, to build on the skills developed while studying for an MSc in Computing and IT at the University of St Andrews, which I have recently completed with Distinction. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau. I am also presently learning React.</p>
             <p>I am a keen learner, and discovered a passion for coding after taking up programming as a hobby through online courses. Prior to deciding to change field, my career was primarily in financial services regulation at the Bank of England, with a focus on digital communications and consumer protection policy development.
             </p>
         </div>
