--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <b>Analyst - Recovery and Compensation Policy (January 2015 – June 2017)</b>
                             <p class="employmentText">Developed consumer protection policy and conducted statutory oversight of the Financial Services Compensation Service (FSCS) by:</p>
                             <ul>
-                                <li>Working on BofE/PRA policy approach to international Insurance Guarantee Scheme harmonisation and to FSCS funding under Solvency II insurance capital adequacy rules.</li>
+                                <li>Working on BofE/PRA policy approach to international Insurance Guarantee Schemes.</li>
                                 <li>Assessing FSCS budget and senior appointments, improving the PRA’s delivery process for FSCS oversight, and drafting relevant proposals for PRA Board, industry and public stakeholders.</li>
                             </ul>
                         </li>
