--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="card-body">
             <ul>
               <li><b>Guitar:</b>
-                  <p>I am a keen guitarist, and prior to commencing my degree I spent a very rewarding month volunteering with <a href="https://www.facebook.com/theguitarsocialfoundation/">The Guitar Social Foundation</a>, which seeks to provide free music tuition to people affected by disabilities, mental health issues, or homelessness amongst other considerations.</p>
+                  <p>I am a keen guitarist, and prior to commencing my degree I spent a very rewarding month volunteering with <a href="https://en-gb.facebook.com/theguitarsocial/">The Guitar Social</a>, which -in addition to social events and courses- provides free music tuition to people affected by disabilities, mental health issues, or homelessness amongst other considerations.</p>
                 </li>
             <li><b>Comedy:</b>
                 <p>While at University I took the opportunity to get involved with the Comedy Society, contributing a number of articles to the satirical student news site Salvator News, as well as contributing material for live panel and sketch shows.</p>
