Updates to add new project: React text adventure

--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
       <p>A quiz game made using jQuery and the Quizdb API.</p>
     </div>
   </div>
+
 <div class="row">
     <div class="col-sm-4 projectBox text-center">
       <a href="musicDB/CS5002A3albums.html" class="projectLink"><h3>Album Data Table</h3></a>
@@ -367,11 +368,11 @@
       <p>A table of data about best-selling albums that can be filtered by single or multiple criteria.</p>
     </div>
 
-  <div class="col-sm-4 projectBox text-center">
-      <a href="client-running-checkers-app/checkers.html" class="projectLink"><h3>Checkers game</h3></a>
-      <a href="client-running-checkers-app/checkers.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/checkers.png"></a>
-      <p>A simple local two-player Checkers game made using jQuery.</p>
-    </div>
+    <div class="col-sm-4 projectBox text-center">
+  <a href="christiePage/fccTributeTest.html" class="projectLink"><h3>Agatha Christie tribute page</h3></a>
+    <a href="christiePage/fccTributeTest.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/christiePage.png"></a>
+    <p>Inspired by the FreeCodeCamp tribute page challenge, this is a small responsive website with an art deco style made as an experiment with front-end design using pure HTML5 and CSS3, including CSS Grid and Flexbox. Resize the page to see decorative elements change and certain text elements move into to mobile-friendly horizontally scrolling containers.</p>
+  </div>
 
   <div class="col-sm-4 projectBox text-center">
     <a href="latinboardgame/gridgame.html" class="projectLink"><h3>Latin synonym game A</h3></a>
@@ -390,17 +391,24 @@
       <div class="col-sm-4 projectBox text-center">
     <a href="maps/maps.html" class="projectLink"><h3>UFO sighting map</h3></a>
       <a href="maps/maps.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/ufomap.png"></a>
-      <p>A work-in-progress interactive map of UK-based UFO sightings using Leaflet.js and D3 to visualise a Kaggle dataset.</p>
+      <p>An interactive map of UK-based UFO sightings using Leaflet.js and D3 to visualise a Kaggle dataset.</p>
     </div>
 
     <div class="col-sm-4 projectBox text-center">
-  <a href="christiePage/fccTributeTest.html" class="projectLink"><h3>Agatha Christie tribute page</h3></a>
-    <a href="christiePage/fccTributeTest.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/christiePage.png"></a>
-    <p>Inspired by the FreeCodeCamp tribute page challenge, this is a small responsive website with an art deco style made as an experiment with front-end design using pure HTML5 and CSS3, including CSS Grid and Flexbox. Resize the page to see decorative elements change and certain text elements move into to mobile-friendly horizontally scrolling containers.</p>
-  </div>
+      <a href="https://dtb50.github.io/adventure-react/" class="projectLink"><h3>React Quest</h3></a>
+      <a href="https://dtb50.github.io/adventure-react/"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/adventureScreen.png"></a>
+      <p>A work-in-progress retro-style adventure game made to test the React library (and because I've always wanted to make a text adventure). Some refinement is still needed to the parser, and more rooms and puzzles will be added.</p>
+    </div>
+
   </div>
 
   <div class="row">
+    <div class="col-sm-4 projectBox text-center">
+        <a href="client-running-checkers-app/checkers.html" class="projectLink"><h3>Checkers game</h3></a>
+        <a href="client-running-checkers-app/checkers.html"><img class="img-responsive center-block img-thumbnail imgfit projectImg" src="siteimgs/checkers.png"></a>
+        <p>A simple local two-player Checkers game made using jQuery.</p>
+      </div>
+
       <div class="col-sm-4 projectBox text-center">
         <h3>More to come...</h3>
         <div class="img-responsive center-block img-thumbnail fakeimg imgfit"><i class="fas fa-ellipsis-h"></i></div>
