--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <p class="employmentText">Developed consumer protection policy and conducted statutory oversight of the Financial Services Compensation Service (FSCS) by:</p>
                             <ul>
                                 <li>Working on BofE/PRA policy approach to international Insurance Guarantee Schemes.</li>
-                                <li>Assessing FSCS budget and senior appointments, improving the PRA’s delivery process for FSCS oversight, and drafting relevant proposals for PRA Board, industry and public stakeholders.</li>
+                                <li>Assisted with assessing FSCS budget and senior appointments, and working to improve the PRA’s delivery process for FSCS oversight including relevant MOUs, and drafting relevant proposals for PRA Board, industry and public stakeholders.</li>
                             </ul>
                         </li>
                         <li class="buffer">
