--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                     <ul>
                         <li class="buffer">
                             <b>Analyst - Recovery and Compensation Policy (January 2015 – June 2017)</b>
-                            <p class="employmentText">Developed and supported the development of consumer protection policy and conducted statutory oversight of the Financial Services Compensation Service (FSCS) by:</p>
+                            <p class="employmentText">Contributed to the development of consumer protection policy and statutory oversight of the Financial Services Compensation Service (FSCS) by:</p>
                             <ul>
-                                <li>Working on BofE/PRA policy approach to international Insurance Guarantee Schemes.</li>
+                                <li>Working on BofE/PRA policy approach to matters relating to Insurance Guarantee Schemes.</li>
                                 <li>Assisted with assessing FSCS budget and senior appointments, and working to improve the PRA’s delivery process for FSCS oversight including updating relevant MOUs. These included drafting relevant proposals for PRA Board, industry and public stakeholders.</li>
                             </ul>
                         </li>
