--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <p class="employmentText">Contributed to the development of consumer protection policy and statutory oversight of the Financial Services Compensation Service (FSCS) by:</p>
                             <ul>
                                 <li>Working on BofE/PRA policy approach to matters relating to Insurance Guarantee Schemes.</li>
-                                <li>Assisted with assessing FSCS budget and senior appointments, and working to improve the PRA’s delivery process for FSCS oversight including updating relevant MOUs. These included drafting relevant proposals for PRA Board, industry and public stakeholders.</li>
+                                <li>Assisting with the assessment of the FSCS’s budget and key senior appointments, and working to develop an improved approach to the PRA’s delivery process for FSCS oversight, including revising relevant MoUs. These tasks included drafting relevant proposals for PRA Board, industry and public stakeholders.</li>
                             </ul>
                         </li>
                         <li class="buffer">
