--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <p>Significant experience of developing clear and concise written outputs for communication by web, print and presentation to internal (working level and senior) and external (public and industry) stakeholders of the Bank of England. This entailed summarising complex technical and legal subjects in an accessible yet legally sound style.</p>
                   </li>
                     <li><b>Stakeholder management and teamworking</b>
-                        <p>Experience with coordinating and/or collaborating on projects (e.g. policy development, policy consultations and communication outputs) that required input from a wide range of internal and external stakeholders including technical and legal staff, senior committees, and members of the financial services industry and public.</p>
+                        <p>Experience with coordinating and/or collaborating on projects (e.g. policy/statutory oversight development, policy/statutory oversight consultations and communications outputs) that required input from a wide range of internal and external stakeholders including technical and legal staff, senior committees, and members of the financial services industry and public.</p>
                   </li>
                 </ul>
             </div>
